# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-09de43429c599ed825c1babf054ea395cf06840177ef522682923965f0f7b991.json  query-4cc327c341bf8732574fd75bec116355f508d63b93f826dbf7dbe2da7825b98d.json
configuration/: base.yaml  production.yaml
migrations/: 20250609215335_create_subscriptions_table.sql  20250717221827_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
templates/: confirmation_email.html  confirmation_email.txt
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
