[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
config = "0.15.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.18"
serde-aux = "4"

[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]

[dev-dependencies]
reqwest = "0.12.19"
